--- a/app/partials/printing.html
+++ b/app/partials/printing.html
@@ -7,5 +7,5 @@
       <% }) %>
     </select>
   </div>
-  <button type="submit" class="btn btn-default">Print Label</button>
+  <button class="btn btn-default">Print Label</button>
 </form>
